fix: resolve all SonarCloud issues Java: - Replace @Autowired field injection with constructor injection (@RequiredArgsConstructor) in all services and controllers - Expand all wildcard imports (jakarta.persistence.*, web.bind.annotation.*, enums.*, model.*, repository.*, validation.constraints.*) - Replace throw new RuntimeException with ResponseStatusException/IllegalStateException/IllegalArgumentException - Replace java.util.logging.Logger with SLF4J (@Slf4j) in SecurityFilter - Replace Arrays.asList with List.of in SecurityConfig - Replace lambda expressions with method references (Telefone::getNumero) - Replace Collectors.toList() with .toList() in AuthService, HabitService, UserController - Fix null safety for MultipartFile.getOriginalFilename() in FileStorageService - Catch specific IOException instead of generic Exception in FileStorageService - Fix catch(Exception e) to catch specific ResponseStatusException in PropertyController - Add missing maven-wrapper.properties TypeScript: - Remove all console.error/console.log usages across all components - Replace all 'any' types with proper types (Record<string, string>, unknown[], HttpErrorResponse, PropertyPhoto, etc.) - Add typed JwtPayloadCustom interface to replace 'any' in JWT decode - Merge duplicate rxjs imports in chat-widget.component.ts - Add comment to empty catch blocks (scrollToBottom) - Fix FileReader.onload event type (ProgressEvent<FileReader>) - Fix event handler parameter type (Event -> HTMLInputElement cast)