@@ -2,27 +2,29 @@ package br.edu.ufape.roomie.controller;
 
 import br.edu.ufape.roomie.dto.UpdateUserDTO;
 import br.edu.ufape.roomie.dto.UserResponseDTO;
+import br.edu.ufape.roomie.model.Telefone;
 import br.edu.ufape.roomie.model.User;
 import br.edu.ufape.roomie.projection.OwnerReportView;
 import br.edu.ufape.roomie.repository.UserRepository;
 import br.edu.ufape.roomie.service.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/user")
+@RequiredArgsConstructor
 public class UserController {
 
-    @Autowired
-    private UserService userService;
-
-    @Autowired
-    private UserRepository userRepository;
+    private final UserService userService;
+    private final UserRepository userRepository;
 
     @PatchMapping("/profile")
     public ResponseEntity<UserResponseDTO> updateProfile(
@@ -37,8 +39,8 @@ public class UserController {
         response.setGender(userUpdated.getGender());
         if (userUpdated.getTelefones() != null) {
             response.setPhones(userUpdated.getTelefones().stream()
-                    .map(telefone -> telefone.getNumero())
-                    .collect(Collectors.toList()));
+                    .map(Telefone::getNumero)
+                    .toList());
         }
         response.setRole(userUpdated.getRole());
 
